--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,211 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  align-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.introduction {
+  background-image: linear-gradient(to right, rgb(83, 82, 82) 65%, white);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.introduction > h1 {
+  color: white;
+  padding: 0.5%;
+  text-align: center;
+  font-size: 3em;
+}
+
+.about-me-container {
+  flex-basis: 100%
+  
+}
+
+.about-me-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.about-me-container > p{
+  flex: 0 0 65%;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1.5em;
+  color: white;
+  padding: 0.8%;
+  text-align: start;
+  line-height: 1.5em;
+}
+
+.image-of-me-container {
+  flex: 0 0 33%;
+  align-content: center;
+}
+
+.image-of-me-container > img {
+  padding: 0.5%;
+  margin-left: 25%;
+  margin-bottom: 5%;
+}
+
+.languages-container {
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  align-content: flex-start;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.languages-container > h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  font-size: 2.5em;
+  text-align: center;
+  color: white;
+}
+
+.languages-container > div {
+  display: flex;
+  flex-direction: row;
+}
+
+.languages-container > div > ul {
+  flex: 0 0 25%;
+  padding-left: 2%;
+  padding-right: 2%;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.languages-container > div > ul > li {
+  font-size: 1.2em;
+}
+
+.languages-container > div > ul > li > h3{
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.languages-container > div > ul > li > h4{
+  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.project-info {
+  width: 100%;
+  height: 100%;
+  background: gray;
+  border-radius: 25px;
+}
+
+.project-info > h1 {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  background-color: red;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  font-size: 2.5em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#project-card{
+  width: 100%;
+  height: 100%;
+  background: indigo;
+}
+
+.projects{
+  width: 95%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: green;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
+}
+
+.backButton-container {
+  flex: 0 0 10%;
+  background-color: pink;
+}
+
+.backButton {
+  width: 100%;
+  height: 100%;
+  background: black;
+  color: white;
+}
+
+.displayProject {
+  
+}
+
+.projectDescription {
+  background: lightseagreen;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.aboutProject {
+  background:mediumslateblue;
+}
+
+.aboutProject > h3 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  font-size: 1.5em;
+  color: white;
+  padding: 1%;
+  line-height: 0.5em;
+}
+
+.aboutProject > h4 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  font-size: 1.5em;
+  color: white;
+  line-height: 0.5em;
+  padding-left: 1%;
+}
+
+.aboutProject > p {
+  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding-left: 1%;
+  font-size: 1.5em;
+  padding-bottom: 2%;
+}
+
+
+
+.projectImages {
+  flex: 0 0 50%;
+  background: maroon;
+}
+
+.nextButton-container {
+  flex: 0 0 10%;
+  background-color: pink;
+}
+
+.nextButton {
+  width: 100%;
+  height: 100%;
+  background: black;
+  color: white;
 }
